tests/golden/frontend/valid/inline_proc_expr.vit
entry main at core/app {
  let x: int = 2
  let y: int = x + 1
  return y
}
