tests/golden/frontend/invalid/parse_missing_rbrace.vit
entry main at core/app {
  let x: int = 1
  if x > 0 {
    return x
}
